fix tokens overflow, fix excessive loading state

--- a/src/app/features/swaps/shared/tokens-select/components/tokens-select/tokens-select.component.scss
+++ b/src/app/features/swaps/shared/tokens-select/components/tokens-select/tokens-select.component.scss
@@ -121,6 +121,7 @@ app-icon-button {
     display: flex;
     align-items: center;
     height: 90px;
+    overflow: hidden;
   
     &__search {
       position: relative;
